specify conf file. fixed docker jvm options